# study-agent-backend

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test.ipynb  test_curl_command.sh
.github/workflows/: ci.yml
app/: main.py  settings.py
app/core/: llm_config.py
app/study_plan/: study_api.py
app/study_plan/agents/research_graph/: graph.py  nodes.py  prompts.py  state.py  streaming_utilities.py  tools.py
app/study_plan/services/: create_final_plan.py
tests/: conftest.py  test_app_smoke.py
tests/core/: test_llm_config.py
