[project]
name = "study-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pytest>=8.3.5",
    "httpx>=0.27.0",
    "uvicorn>=0.34.1",
    "ruff>=0.11.6",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "langchain>=0.3.23",
    "langgraph>=0.3.31",
    "langchain-openai>=0.3.14",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.0",
    "langchain-tavily>=0.1.5",
    "langchain-anthropic>=0.3.12",
    "flask-cors>=5.0.1",
]
